--- a/PowerPointEditorLib.Tests/PowerPointEditorLib.Tests.csproj
+++ b/PowerPointEditorLib.Tests/PowerPointEditorLib.Tests.csproj
@@ -4,7 +4,16 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
 
-    <IsPackable>false</IsPackable>
+    <IsPackable>true</IsPackable>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+
+    <PackageId>CFXYZ.PowerPointEditorLib</PackageId>
+    <Version>1.0.0</Version>
+    <PackageTags>PowerPoint;Open XML SDK</PackageTags>
+    <Description>
+      A library to make editing PowerPoint presentations more approachable by wrapping the Open XML SDK.
+    </Description>
+
   </PropertyGroup>
 
   <ItemGroup>
