--- a/PowerPointEditorLib/PowerPointEditorLib.csproj
+++ b/PowerPointEditorLib/PowerPointEditorLib.csproj
@@ -4,6 +4,16 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+
+    <IsPackable>true</IsPackable>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+
+    <PackageId>CFXYZ.PowerPointEditorLib</PackageId>
+    <Version>1.0.0</Version>
+    <PackageTags>PowerPoint;Open XML SDK</PackageTags>
+    <Description>
+      A library to make editing PowerPoint presentations more approachable by wrapping the Open XML SDK.
+    </Description>
   </PropertyGroup>
 
   <ItemGroup>
