--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -42,3 +42,4 @@ jobs:
     - name: Publish
       if: startsWith(github.ref, 'refs/heads/release')
       run: nuget push **\CFXYZ.PowerPointEditorLib.*.nupkg -Source 'https://api.nuget.org/v3/index.json' -ApiKey ${{secrets.NUGET_API_KEY}}
+      continue-on-error: true
